--- a/dreamfr.ipynb
+++ b/dreamfr.ipynb
@@ -19,15 +19,15 @@
      "source": [
       "# Deep Dreams (with Caffe)\n",
       "\n",
-      "This notebook demonstrates how to use the [Caffe](http://caffe.berkeleyvision.org/) neural network framework to produce \"dream\" visuals shown in the [Google Research blog post](http://googleresearch.blogspot.ch/2015/06/inceptionism-going-deeper-into-neural.html).\n",
+      "ce carnet permet d'utiliser [Caffe](http://caffe.berkeleyvision.org/) réseau neuronal pour produire \"dream\" des visuels shown in the [Google Research blog post](http://googleresearch.blogspot.ch/2015/06/inceptionism-going-deeper-into-neural.html).\n",
       "\n",
-      "It'll be interesting to see what imagery people are able to generate using the described technique. If you post images to Google+, Facebook, or Twitter, be sure to tag them with **#deepdream** so other researchers can check them out too.\n",
+      "il sera intéressant de voir ce que produiront les personnes possédant cette technique de visualisation. Si vous postez des images Google+, Facebook, or Twitter, be sure to tag them with **#deepdream** so other researchers can check them out too.\n",
       "\n",
       "##Dependencies\n",
-      "This notebook is designed to have as few dependencies as possible:\n",
-      "* Standard Python scientific stack: [NumPy](http://www.numpy.org/), [SciPy](http://www.scipy.org/), [PIL](http://www.pythonware.com/products/pil/), [IPython](http://ipython.org/). Those libraries can also be installed as a part of one of the scientific packages for Python, such as [Anaconda](http://continuum.io/downloads) or [Canopy](https://store.enthought.com/).\n",
-      "* [Caffe](http://caffe.berkeleyvision.org/) deep learning framework ([installation instructions](http://caffe.berkeleyvision.org/installation.html)).\n",
-      "* Google [protobuf](https://developers.google.com/protocol-buffers/) library that is used for Caffe model manipulation."
+      "ce carnet a été écrit avec le moins de dépendences que possible:\n",
+      "* utilisation du Standard Python scientific stack: [NumPy](http://www.numpy.org/), [SciPy](http://www.scipy.org/), [PIL](http://www.pythonware.com/products/pil/), [IPython](http://ipython.org/). Those libraries can also be installed as a part of one of the scientific packages for Python, such as [Anaconda](http://continuum.io/downloads) or [Canopy](https://store.enthought.com/).\n",
+      "* [Caffe](http://caffe.berkeleyvision.org/) deep learning framework ([instructions d'installation](http://caffe.berkeleyvision.org/installation.html)).\n",
+      "* librairie Google [protobuf](https://developers.google.com/protocol-buffers/)  that is used for Caffe model manipulation."
      ]
     },
     {
