suite traduction vers fr
des termes comme ascent sont essentiels mais difficile à traduire: ascent = montée mais de quoi exactement et les gradients ? on dirait une utilisation de reconnaisance des parties d'images (qui sont déposées en mode texte.. donc en fait Caffe va chercher dans ce code et trouver les redondances .. ensuite les récupérer pour en faire des 'détails.. et cela à aprtir de modèles différents auxquel il est confronté.
ça parrait hyper basique et laborieux mais l'ordi fait le calcul.. on pourrait créer un moèdle avec une image ultra simple pour confronter la découverte.. ex: des carrés rouge juste en pourtour...

--- a/dreamfr.ipynb
+++ b/dreamfr.ipynb
@@ -19,7 +19,7 @@
      "source": [
       "# Deep Dreams (with Caffe)\n",
       "\n",
-      "ce carnet permet d'utiliser [Caffe](http://caffe.berkeleyvision.org/) réseau neuronal pour produire \"dream\" des visuels shown in the [Google Research blog post](http://googleresearch.blogspot.ch/2015/06/inceptionism-going-deeper-into-neural.html).\n",
+      "Ce carnet permet d'utiliser [Caffe](http://caffe.berkeleyvision.org/) réseau neuronal pour produire \"dream\" des visuels shown in the [Google Research blog post](http://googleresearch.blogspot.ch/2015/06/inceptionism-going-deeper-into-neural.html).\n",
       "\n",
       "il sera intéressant de voir ce que produiront les personnes possédant cette technique de visualisation. Si vous postez des images Google+, Facebook, or Twitter, be sure to tag them with **#deepdream** so other researchers can check them out too.\n",
       "\n",
@@ -34,7 +34,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# imports and basic notebook setup\n",
+      "# mettre à jour et importer ce carnet\n",
       "from cStringIO import StringIO\n",
       "import numpy as np\n",
       "import scipy.ndimage as nd\n",
@@ -44,10 +44,10 @@
       "\n",
       "import caffe\n",
       "\n",
-      "# If your GPU supports CUDA and Caffe was built with CUDA support,\n",
-      "# uncomment the following to run Caffe operations on the GPU.\n",
+      "# Caffe le générateur utilise CUDA avec votre proc de carte Graphique,\n",
+      "# décommentez ci-dessous pour démarrer les opérations de Caffe sur votre GPU.\n",
       "# caffe.set_mode_gpu()\n",
-      "# caffe.set_device(0) # select GPU device if multiple devices exist\n",
+      "# caffe.set_device(0) # choisir la carte GFX du GPU s'il y en a plusieurs \n",
       "\n",
       "def showarray(a, fmt='jpeg'):\n",
       "    a = np.uint8(np.clip(a, 0, 255))\n",
@@ -72,8 +72,8 @@
      },
      "source": [
       "## Loading DNN model\n",
-      "In this notebook we are going to use a [GoogLeNet](https://github.com/BVLC/caffe/tree/master/models/bvlc_googlenet) model trained on [ImageNet](http://www.image-net.org/) dataset.\n",
-      "Feel free to experiment with other models from Caffe [Model Zoo](https://github.com/BVLC/caffe/wiki/Model-Zoo). One particularly interesting [model](http://places.csail.mit.edu/downloadCNN.html) was trained in [MIT Places](http://places.csail.mit.edu/) dataset. It produced many visuals from the [original blog post](http://googleresearch.blogspot.ch/2015/06/inceptionism-going-deeper-into-neural.html)."
+      "dans ce carnet on va utiliser un modèle d'entrainement [GoogLeNet](https://github.com/BVLC/caffe/tree/master/models/bvlc_googlenet) utilisant la biblio d'images de [ImageNet](http://www.image-net.org/) .\n",
+      "Feel free to experiment with other models from Caffe [Model Zoo](https://github.com/BVLC/caffe/wiki/Model-Zoo). Un modèle particulièrement intéressant [model](http://places.csail.mit.edu/downloadCNN.html) a été entrainé sur les données du [MIT Places](http://places.csail.mit.edu/) .Ca a produit bcp de visuels [original blog post](http://googleresearch.blogspot.ch/2015/06/inceptionism-going-deeper-into-neural.html). "
      ]
     },
     {
@@ -85,17 +85,17 @@
       "param_fn = model_path + 'bvlc_googlenet.caffemodel'\n",
       "\n",
       "# Patching model to be able to compute gradients.\n",
-      "# Note that you can also manually add \"force_backward: true\" line to \"deploy.prototxt\".\n",
+      "# A noter que vous pouvez ajouter aussi manuellement la ligne \"force_backward: true\" vers \"deploy.prototxt\".\n",
       "model = caffe.io.caffe_pb2.NetParameter()\n",
       "text_format.Merge(open(net_fn).read(), model)\n",
       "model.force_backward = True\n",
       "open('tmp.prototxt', 'w').write(str(model))\n",
       "\n",
       "net = caffe.Classifier('tmp.prototxt', param_fn,\n",
-      "                       mean = np.float32([104.0, 116.0, 122.0]), # ImageNet mean, training set dependent\n",
+      "                       mean = np.float32([104.0, 116.0, 122.0]), # ImageNet connaissance dépendante du set d'entrainement\n",
       "                       channel_swap = (2,1,0)) # the reference model has channels in BGR order instead of RGB\n",
       "\n",
-      "# a couple of utility functions for converting to and from Caffe's input image layout\n",
+      "# un couple de fonctions utiles pour convertir le plan (input layout) d'entrée (PE) des images vers ou depuis Caffe \n",
       "def preprocess(net, img):\n",
       "    return np.float32(np.rollaxis(img, 2)[::-1]) - net.transformer.mean['data']\n",
       "def deprocess(net, img):\n",
@@ -118,7 +118,7 @@
       "id": "UeV_fJ4QOZNb"
      },
      "source": [
-      " Producing dreams"
+      " produire des rêves"
      ]
     },
     {
@@ -128,7 +128,7 @@
       "id": "9udrp3efOZNd"
      },
      "source": [
-      "Making the \"dream\" images is very simple. Essentially it is just a gradient ascent process that tries to maximize the L2 norm of activations of a particular DNN layer. Here are a few simple tricks that we found useful for getting good images:\n",
+      "Faire des images \"dream\" est très simple. Essentiellement, c'est juste un processus de montée (ascent) en gradients qui tente de maximiser la norme L2 d'activations d'un calque DNN. Voici qques trucs que nous avons trouvés utiles pour avoir de bonnes images:\n",
       "* offset image by a random jitter\n",
       "* normalize the magnitude of gradient ascent steps\n",
       "* apply ascent across multiple scales (octaves)\n",
@@ -145,7 +145,7 @@
       "\n",
       "def make_step(net, step_size=1.5, end='inception_4c/output', \n",
       "              jitter=32, clip=True, objective=objective_L2):\n",
-      "    '''Basic gradient ascent step.'''\n",
+      "    '''Etapes de montée des gradients de base.'''\n",
       "\n",
       "    src = net.blobs['data'] # input image is stored in Net's 'data' blob\n",
       "    dst = net.blobs[end]\n",
@@ -182,7 +182,7 @@
       "id": "nphEdlBgOZNk"
      },
      "source": [
-      "Next we implement an ascent through different scales. We call these scales \"octaves\"."
+      "ensuite on implémente une montée (Ascent) à travers diverses échelles. On appelle ces échelles des \"octaves\"."
      ]
     },
     {
@@ -197,22 +197,22 @@
       "        octaves.append(nd.zoom(octaves[-1], (1, 1.0/octave_scale,1.0/octave_scale), order=1))\n",
       "    \n",
       "    src = net.blobs['data']\n",
-      "    detail = np.zeros_like(octaves[-1]) # allocate image for network-produced details\n",
-      "    for octave, octave_base in enumerate(octaves[::-1]):\n",
+      "    detail = np.zeros_like(octaves[-1]) # image allouée au réseau générateur de détails  \n",
+      "    pour les octave, octave_base est énuméré(octaves[::-1]):\n",
       "        h, w = octave_base.shape[-2:]\n",
       "        if octave > 0:\n",
       "            # upscale details from the previous octave\n",
       "            h1, w1 = detail.shape[-2:]\n",
       "            detail = nd.zoom(detail, (1, 1.0*h/h1,1.0*w/w1), order=1)\n",
       "\n",
-      "        src.reshape(1,3,h,w) # resize the network's input image size\n",
+      "        src.reshape(1,3,h,w) # redimmensionne la taille du réseau d'entrée d'image\n",
       "        src.data[0] = octave_base+detail\n",
       "        for i in xrange(iter_n):\n",
       "            make_step(net, end=end, clip=clip, **step_params)\n",
       "            \n",
       "            # visualization\n",
       "            vis = deprocess(net, src.data[0])\n",
-      "            if not clip: # adjust image contrast if clipping is disabled\n",
+      "            if not clip: # ajuster le contraste d'image si le découpage (clipping) est désactivé\n",
       "                vis = vis*(255.0/np.percentile(vis, 99.98))\n",
       "            showarray(vis)\n",
       "            print octave, i, end, vis.shape\n",
