--- a/dreamfr.ipynb
+++ b/dreamfr.ipynb
@@ -27,8 +27,7 @@
       "ce carnet a été écrit avec le moins de dépendences que possible:\n",
       "* utilisation du Standard Python scientific stack: [NumPy](http://www.numpy.org/), [SciPy](http://www.scipy.org/), [PIL](http://www.pythonware.com/products/pil/), [IPython](http://ipython.org/). Those libraries can also be installed as a part of one of the scientific packages for Python, such as [Anaconda](http://continuum.io/downloads) or [Canopy](https://store.enthought.com/).\n",
       "* [Caffe](http://caffe.berkeleyvision.org/) deep learning framework ([instructions d'installation](http://caffe.berkeleyvision.org/installation.html)).\n",
-      "* librairie Google [protobuf](https://developers.google.com/protocol-buffers/)  that is used for Caffe model manipulation."
-     ]
+      "* librairie Google [protobuf](https://developers.google.com/protocol-buffers/)  utilisé par les manip des modèles Caffe ]
     },
     {
      "cell_type": "code",
@@ -44,7 +43,7 @@
       "\n",
       "import caffe\n",
       "\n",
-      "# Caffe le générateur utilise CUDA avec votre proc de carte Graphique,\n",
+      "# le générateur  - Caffe -  utilise CUDA avec votre proc de carte Graphique,\n",
       "# décommentez ci-dessous pour démarrer les opérations de Caffe sur votre GPU.\n",
       "# caffe.set_mode_gpu()\n",
       "# caffe.set_device(0) # choisir la carte GFX du GPU s'il y en a plusieurs \n",
@@ -72,20 +71,20 @@
      },
      "source": [
       "## Loading DNN model\n",
-      "dans ce carnet on va utiliser un modèle d'entrainement [GoogLeNet](https://github.com/BVLC/caffe/tree/master/models/bvlc_googlenet) utilisant la biblio d'images de [ImageNet](http://www.image-net.org/) .\n",
-      "Feel free to experiment with other models from Caffe [Model Zoo](https://github.com/BVLC/caffe/wiki/Model-Zoo). Un modèle particulièrement intéressant [model](http://places.csail.mit.edu/downloadCNN.html) a été entrainé sur les données du [MIT Places](http://places.csail.mit.edu/) .Ca a produit bcp de visuels [original blog post](http://googleresearch.blogspot.ch/2015/06/inceptionism-going-deeper-into-neural.html). "
+      "dans ce carnet on va utiliser le modèle d'entrainement [GoogLeNet](https://github.com/BVLC/caffe/tree/master/models/bvlc_googlenet) (un ficheir de 51Mo)utilisant la biblio d'images de [ImageNet](http://www.image-net.org/) .\n",
+      "C'est donc à cette adresse les sources de deepdream ? (genre les chiens ?). Vous pourrez utiliser librement les autres biblio de Caffe [Model Zoo](https://github.com/BVLC/caffe/wiki/Model-Zoo). Un modèle particulièrement intéressant [model](http://places.csail.mit.edu/downloadCNN.html) a été entrainé sur les données du [MIT Places](http://places.csail.mit.edu/) . Ca a produit bcp de visuels [original blog post](http://googleresearch.blogspot.ch/2015/06/inceptionism-going-deeper-into-neural.html). "
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "model_path = '../caffe/models/bvlc_googlenet/' # substitute your path here\n",
+      "model_path = '../caffe/models/bvlc_googlenet/' # votre adresse de substitution \n",
       "net_fn   = model_path + 'deploy.prototxt'\n",
       "param_fn = model_path + 'bvlc_googlenet.caffemodel'\n",
       "\n",
       "# Patching model to be able to compute gradients.\n",
-      "# A noter que vous pouvez ajouter aussi manuellement la ligne \"force_backward: true\" vers \"deploy.prototxt\".\n",
+      "# A noter que vous pouvez aussi ajouter manuellement la ligne \"force_backward: true\" vers \"deploy.prototxt\".\n",
       "model = caffe.io.caffe_pb2.NetParameter()\n",
       "text_format.Merge(open(net_fn).read(), model)\n",
       "model.force_backward = True\n",
