--- a/dreamfr.ipynb
+++ b/dreamfr.ipynb
@@ -19,9 +19,9 @@
      "source": [
       "# Deep Dreams (with Caffe)\n",
       "\n",
-      "Ce carnet permet d'utiliser [Caffe](http://caffe.berkeleyvision.org/) réseau neuronal pour produire \"dream\" des visuels shown in the [Google Research blog post](http://googleresearch.blogspot.ch/2015/06/inceptionism-going-deeper-into-neural.html).\n",
+      "Ce carnet permet d'utiliser [Caffe](http://caffe.berkeleyvision.org/) réseau neuronal pour produire \"dream\" des visuels montrés ds le [Google Research blog post](http://googleresearch.blogspot.ch/2015/06/inceptionism-going-deeper-into-neural.html).\n",
       "\n",
-      "il sera intéressant de voir ce que produiront les personnes possédant cette technique de visualisation. Si vous postez des images Google+, Facebook, or Twitter, be sure to tag them with **#deepdream** so other researchers can check them out too.\n",
+      "il sera intéressant de voir ce que produiront les personnes possédant cette technique de visualisation. Si vous postez des images Google+, Facebook, or Twitter, utilisez le tag **#deepdream** pour que d'autres chercheurs tombent dessus.\n",
       "\n",
       "##Dependencies\n",
       "ce carnet a été écrit avec le moins de dépendences que possible:\n",
@@ -71,8 +71,8 @@
      },
      "source": [
       "## Loading DNN model\n",
-      "dans ce carnet on va utiliser le modèle d'entrainement [GoogLeNet](https://github.com/BVLC/caffe/tree/master/models/bvlc_googlenet) (un ficheir de 51Mo)utilisant la biblio d'images de [ImageNet](http://www.image-net.org/) .\n",
-      "C'est donc à cette adresse les sources de deepdream ? (genre les chiens ?). Vous pourrez utiliser librement les autres biblio de Caffe [Model Zoo](https://github.com/BVLC/caffe/wiki/Model-Zoo). Un modèle particulièrement intéressant [model](http://places.csail.mit.edu/downloadCNN.html) a été entrainé sur les données du [MIT Places](http://places.csail.mit.edu/) . Ca a produit bcp de visuels [original blog post](http://googleresearch.blogspot.ch/2015/06/inceptionism-going-deeper-into-neural.html). "
+      "dans ce carnet on va utiliser le modèle d'entrainement [GoogLeNet](https://github.com/BVLC/caffe/tree/master/models/bvlc_googlenet) (un fichier de 51Mo)utilisant la biblio d'images de [ImageNet](http://www.image-net.org/) .\n",
+      "Vérifier si c'est l'adresse des sources de deepdream ? (genre les chiens ?). Vous pourrez utiliser librement les autres biblio de Caffe [Model Zoo](https://github.com/BVLC/caffe/wiki/Model-Zoo). Un modèle particulièrement intéressant [model](http://places.csail.mit.edu/downloadCNN.html) a été entrainé sur les données du [MIT Places](http://places.csail.mit.edu/) . Ca a produit bcp de visuels [original blog post](http://googleresearch.blogspot.ch/2015/06/inceptionism-going-deeper-into-neural.html). "
      ]
     },
     {
@@ -92,9 +92,9 @@
       "\n",
       "net = caffe.Classifier('tmp.prototxt', param_fn,\n",
       "                       mean = np.float32([104.0, 116.0, 122.0]), # ImageNet connaissance dépendante du set d'entrainement\n",
-      "                       channel_swap = (2,1,0)) # the reference model has channels in BGR order instead of RGB\n",
+      "                       channel_swap = (2,1,0)) # Chaines couleurs du models de référence en BGR au lieu de RGB\n",
       "\n",
-      "# un couple de fonctions utiles pour convertir le plan (input layout) d'entrée (PE) des images vers ou depuis Caffe \n",
+      "# ci-dessous, un couple de fonctions utiles pour convertir le plan (input layout) d'entrée (PE) des images vers ou depuis Caffe \n",
       "def preprocess(net, img):\n",
       "    return np.float32(np.rollaxis(img, 2)[::-1]) - net.transformer.mean['data']\n",
       "def deprocess(net, img):\n",
@@ -127,8 +127,8 @@
       "id": "9udrp3efOZNd"
      },
      "source": [
-      "Faire des images \"dream\" est très simple. Essentiellement, c'est juste un processus de montée (ascent) en gradients qui tente de maximiser la norme L2 d'activations d'un calque DNN. Voici qques trucs que nous avons trouvés utiles pour avoir de bonnes images:\n",
-      "* offset image by a random jitter\n",
+      "Faire des images \"dream\" est très simple. Essentiellement, c'est juste un processus de montée (ascent) en gradients qui tente de maximiser la norme L2 d'activations d'un calque DNN (accentuer la netteté d'une image) (. Voici qques trucs que nous avons trouvés utiles pour avoir de bonnes images:\n",
+      "* décaler l'image par une secousse hasardeuse\n",
       "* normalize the magnitude of gradient ascent steps\n",
       "* apply ascent across multiple scales (octaves)\n",
       "\n",
@@ -153,10 +153,10 @@
       "    src.data[0] = np.roll(np.roll(src.data[0], ox, -1), oy, -2) # apply jitter shift\n",
       "            \n",
       "    net.forward(end=end)\n",
-      "    objective(dst)  # specify the optimization objective\n",
+      "    objective(dst)  # specifier l'objectif d'optimisation\n",
       "    net.backward(start=end)\n",
       "    g = src.diff[0]\n",
-      "    # apply normalized ascent step to the input image\n",
+      "    # appliquer un pas de montée(ascent) normalisé à l'image en entrée\n",
       "    src.data[:] += step_size/np.abs(g).mean() * g\n",
       "\n",
       "    src.data[0] = np.roll(np.roll(src.data[0], -ox, -1), -oy, -2) # unshift image\n",
@@ -200,16 +200,16 @@
       "    pour les octave, octave_base est énuméré(octaves[::-1]):\n",
       "        h, w = octave_base.shape[-2:]\n",
       "        if octave > 0:\n",
-      "            # upscale details from the previous octave\n",
+      "            # augmente les détails depuis l'octave précédent\n",
       "            h1, w1 = detail.shape[-2:]\n",
       "            detail = nd.zoom(detail, (1, 1.0*h/h1,1.0*w/w1), order=1)\n",
       "\n",
-      "        src.reshape(1,3,h,w) # redimmensionne la taille du réseau d'entrée d'image\n",
+      "        src.reshape(1,3,h,w) # redimensionne la taille du réseau d'image entrée\n",
       "        src.data[0] = octave_base+detail\n",
       "        for i in xrange(iter_n):\n",
       "            make_step(net, end=end, clip=clip, **step_params)\n",
       "            \n",
-      "            # visualization\n",
+      "            # visualisation\n",
       "            vis = deprocess(net, src.data[0])\n",
       "            if not clip: # ajuster le contraste d'image si le découpage (clipping) est désactivé\n",
       "                vis = vis*(255.0/np.percentile(vis, 99.98))\n",
@@ -217,9 +217,9 @@
       "            print octave, i, end, vis.shape\n",
       "            clear_output(wait=True)\n",
       "            \n",
-      "        # extract details produced on the current octave\n",
+      "        # extraire les détails produits à l'ocatve actuel\n",
       "        detail = src.data[0]-octave_base\n",
-      "    # returning the resulting image\n",
+      "    # retourner l'image résultante\n",
       "    return deprocess(net, src.data[0])"
      ],
      "language": "python",
@@ -238,7 +238,7 @@
       "id": "QrcdU-lmOZNx"
      },
      "source": [
-      "Now we are ready to let the neural network reveal its dreams! Let's take a [cloud image](https://commons.wikimedia.org/wiki/File:Appearance_of_sky_for_weather_forecast,_Dhaka,_Bangladesh.JPG) as a starting point:"
+      "Mtnt, nous sommes prêts à laisser le réseau neuronal révéler ses rêves ! prenons une image [cloud image](https://commons.wikimedia.org/wiki/File:Appearance_of_sky_for_weather_forecast,_Dhaka,_Bangladesh.JPG) comme point de départ:"
      ]
     },
     {
@@ -567,7 +567,8 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "This way we can affect the style of generated images without using a different training set."
+      "de cette façon nous pouvons changer le style d'images générées avec des blocs (set) d'entrainements différents( ces codes sont importants: 3 9 inception_3b/output. \n"
+       "voir le layers.txt de https://github.com/mjibson/ddd/pull/3/files "
      ]
     }
    ],
